<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scVpp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@null">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.coin.CoinActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/activity_coin_text_view_conversion_de_monedas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="133dp"
            android:layout_height="134dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:srcCompat="@drawable/logo_monedas" />

        <TextView
            android:id="@+id/tvFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="16dp"
            android:text="@string/activity_coin_text_view_from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/activity_coin_text_view_to"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilFrom" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFrom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvFrom"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <AutoCompleteTextView
                android:id="@+id/actvFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_coin_edt_from"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/edtnFrom"
            android:layout_width="136dp"
            android:layout_height="68dp"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/activity_coin_edit_text_help_from"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tilFrom"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toEndOf="@+id/tvTo"
            app:layout_constraintTop_toBottomOf="@+id/tilFrom">

            <AutoCompleteTextView
                android:id="@+id/actvTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_coin_edt_help_to"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:hint="@string/activity_coin_text_view_help_result"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tilTo"
            app:layout_constraintTop_toBottomOf="@+id/edtnFrom" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            app:cornerRadius="12dp"
            android:text="@string/activity_coin_button_calcular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilTo" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="32dp"
            app:cornerRadius="12dp"
            android:text="@string/activity_coin_button_limpiar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>